(Hopefully) Fixed several things
Fixed - Not being able to search on mobile if infinite scrolling is on
Fixed (hopefully) - Some tables not fitting on the screen on mobile

--- a/release/eSixCafe.user.css
+++ b/release/eSixCafe.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           eSix Café
 @namespace      mandorinn
-@version        1.5.7
+@version        1.5.8
 @description    A muted and easy on the eyes style for e621. Big credits to Faucet for the bug reports so far, thank you!
 @author         mandorinn [(www.mandorinn.dev)], faucet [(https://e621.net/users/601225)]
 @updateURL		https://github.com/mandorinn/eSix-Cafe/raw/main/release/eSixCafe.user.css
@@ -3338,6 +3338,25 @@ if themep == classic {
 		font-size: .8rem!important;
 		width: fit-content;
 	}
+	@media screen and (max-width: 800px) {
+		#c-wiki-page-versions {
+		#p-global-listing {
+			width: 90%;
+			margin-inline: auto;
+		}
+		th:nth-child(1) {
+			width: fit-content !important;
+		}
+		table.striped {
+			td {
+				word-wrap: break-word;
+				max-width: 10ch;
+				max-height: 1rem;
+				text-overflow: ellipsis;
+			}
+		}
+	}
+	}
 	/* Cloudflare error page */
 	#cf-wrapper {
 		.code-label {
@@ -3539,15 +3558,92 @@ if themep == classic {
 	div#c-posts div#a-index section#content, div#c-posts div#a-show section#content, div#c-favorites div#a-index section#content {
 		position:unset!important;
 	}
+	div#a-index {
+		ul:not(#related-list) {
+				display: grid;
+				grid-template-columns: 1fr 1fr 1fr;
+				width: 90%;
+				margin-inline: auto;
+				isolation: isolate;
+				gap: .5rem;
+				li {
+					margin-inline: auto;
+					display: grid;
+					grid-template-columns: .5fr 1fr;
+					grid-template-rows: repeat(2, 1.25rem);
+					grid-column-gap: 0px;
+					grid-row-gap: 0px;
+					align-items: center;
+					justify-content: center;
+					min-width: 10ch;
+					left: -.5rem;
+					position: relative;
+					z-index: 2;
+					padding: .25rem;
+					width: calc(fit-content + 2rem);
+					&:hover {
+						.post-count {
+							white-space: nowrap;
+							overflow: hidden;
+							text-overflow: ellipsis;
+							width: 5ch;
+							display: inline !important;
+						}
+						.tag-actions {
+							background-color: var(--bg);
+						}
+					}
+					&::after {
+						content: '';
+						position: absolute;
+						height: 100%;
+						width: 100%;
+						z-index: -1;
+						background-color: var(--bg);
+						border-radius: 4px;
+					} 
+				}
+				span.tag-wrap {
+					display: flex;
+					flex-direction: column;
+				}
+				.tag-actions {
+					z-index: 3;
+					height: .75rem;
+					right: 0 !important;
+					position: relative !important;
+					grid-area: 2 / 1 / 3 / 3; 
+				}
+				span.post-count {
+					position: absolute;
+					bottom: 0;
+					left: 0;
+				}
+				a.search-tag {
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					max-width: 10ch;
+				}
+				a.wiki-link { grid-area: 1 / 1 / 2 / 2; };
+				a.search-tag { grid-area: 1 / 2 / 2 / 3; }; 
+			}
+	}
 	body[data-action="show"] div#c-posts #a-show, body[data-action="show-seq"] div#c-posts #a-show, div#c-posts div#a-index, div#c-posts div#a-show, div#c-favorites div#a-index {
 		display: flex!important;
-		flex-direction: column-reverse;
 		aside#sidebar {
 			padding: 0!important;
 			width: calc(100% - .5rem)!important;
 			margin-inline: auto;
 			display: flex;
 			flex-direction: column;
+			#re621-search {
+				width: 100%;
+			}
+			#blacklist-box {
+				width: fit-content;
+			}
+			
 		}
 		a#sidebar-collapse {
 			display:none;
@@ -3609,6 +3705,9 @@ if themep == classic {
 		#image-extra-controls {
 		margin-top: 45vh;
 		}*/
+	}
+	body[data-action="show"] div#c-posts #a-show, body[data-action="show-seq"] div#c-posts #a-show {
+		flex-direction: column-reverse;
 	}
 	.list-of-comments {
 	margin-top: 2rem;
